--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -4,7 +4,8 @@ $red: #c51109;
 $black: #1a1a1a;
 $banana-gradient: linear-gradient(45deg, #FFAFBD 0%, #F4D03F 100%);
 
-
 $space-big: 30px;
 $space-medium: 20px;
 $space-small: 10px;
+
+$player-height: 80px;
