--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -22,9 +22,17 @@ img, iframe {
 
 /* Custom reset */
 
+* {
+  box-sizing: border-box;
+}
+
 a {
     text-decoration: none;
     color: inherit;
+}
+
+img {
+  max-width: 100%;
 }
 
 ul {
