--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,23 +1,25 @@
 /* https://github.com/vladocar/CSS-Micro-Reset */
 
-body { margin: 0 }
-
-h1, h2, h3, h4, h5, h6 { font-weight:normal }
-
-table
-{
-    border-collapse: collapse;
-    border-spacing: 0
+body {
+  margin: 0
 }
 
-th, td
-{
-    text-align: left;
-    vertical-align: top
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0
+}
+
+th, td {
+  text-align: left;
+  vertical-align: top
 }
 
 img, iframe {
-    border: 0
+  border: 0
 }
 
 /* Custom reset */
@@ -27,8 +29,13 @@ img, iframe {
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
+}
+
+button {
+  border: none;
+  cursor: pointer;
 }
 
 img {
@@ -40,6 +47,6 @@ ul {
   list-style: none;
 }
 
-h1, h2{
+h1, h2 {
   margin: 0;
 }
